fixes spacing

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -19,6 +19,7 @@ hr{
 }
 .container{
     margin-top: 50px;
+    width:70%;
 }
 .panel-background{
     background-color: #f2b632;
@@ -28,7 +29,7 @@ hr{
     padding-top: 1px;
 }
 .car{
-    width:90%;
+    width:80%;
 }
 .buttonGroup{
     margin-top: 30px;
